<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_general_blocking"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable_blocking"
            android:summary="@string/pref_enable_blocking_summary"
            android:title="@string/pref_enable_blocking_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_remote_api"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_filter_remote_api"
            android:summary="@string/pref_filter_remote_api_summary"
            android:title="@string/pref_filter_remote_api_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_filter_remote_api"
            android:key="pref_block_suspicious_numbers"
            android:summary="@string/pref_block_suspicious_numbers_summary"
            android:title="@string/pref_block_suspicious_numbers_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_other_options"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_block_non_contacts"
            android:summary="@string/pref_block_non_contacts_summary"
            android:title="@string/pref_block_non_contacts_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_block_hidden_numbers"
            android:summary="@string/pref_block_hidden_numbers_summary"
            android:title="@string/pref_block_hidden_numbers_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_block_international_numbers"
            android:summary="@string/pref_block_international_numbers_summary"
            android:title="@string/pref_block_international_numbers_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_block_stir_shaken_risk"
            android:summary="@string/pref_block_stir_shaken_risk_summary"
            android:title="@string/pref_block_stir_shaken_risk_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_mute_instead_of_block"
            android:summary="@string/pref_mute_instead_of_block_summary"
            android:title="@string/pref_mute_instead_of_block_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_notifications"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_show_notification"
            android:summary="@string/pref_show_notification_summary"
            android:title="@string/pref_show_notification_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
